# FEUP-AEDA

./: .gitignore  README.md
ex0_market/: CMakeLists.txt
ex0_market/src/: main.cpp
ex0_market/src/exception/file/: fileException.h
ex0_market/src/exception/market/: business.cpp  business.h  market.cpp
ex0_market/src/market/: market.cpp  market.h
ex0_market/src/market/participant/: participant.cpp  participant.h
ex0_market/src/market/product/: marketable_product.cpp  marketable_product.h  product.cpp  product.h
ex0_sports/: README.md
ex0_sports/src/personal/: Athlete.cpp  ClubMember.h  Personal.cpp  Personal.h  Teacher.cpp
exams/: README.md
exams/1617_exam3/: CMakeLists.txt  main.cpp
exams/1617_exam3/src/: Book.cpp  ReadingClub.cpp  ReadingClub.h  User.cpp
exams/1617_exam3/test/: Test.cpp
exams/1718_exam1/: CMakeLists.txt
exams/1718_exam1/src/: Car.cpp  Car.h  Garage.h  main.cpp
exams/1718_exam1/tests/: Test.cpp
exams/1718_exam2/: CMakeLists.txt  main.cpp
exams/1718_exam2/Tests/: tests.cpp
exams/1718_exam2/src/: Doctor.cpp  Doctor.h  Hospital.cpp  Hospital.h
exams/1718_exam3/: CMakeLists.txt  main.cpp
exams/1718_exam3/src/: Expertize.cpp  FEUPConsulting.cpp  FEUPConsulting.h  Student.cpp
exams/1718_exam3/test/: Test.cpp
exams/1819_exam1/Tests/: Account.cpp  Account.h  Bank.cpp  Bank.h  BankOfficer.cpp  BankOfficer.h
exams/1819_exam2/Tests/: CSimpleList.h  CStack.h  Kart.cpp  tests.cpp
exams/1819_exam3/Tests/: Client.cpp  PropertyTypeItem.cpp  REAgency.cpp  REAgency.h  tests.cpp
tp00_market/: CMakeLists.txt  README.md
tp00_market/src/: main.cpp
tp00_market/src/exception/file/: fileException.cpp  fileException.h
tp00_market/src/exception/market/: business.cpp  business.h
tp00_market/src/market/: market.cpp  market.h
tp00_market/src/market/participant/: participant.cpp  participant.h
tp00_market/src/market/product/: marketable_product.cpp  marketable_product.h  product.cpp  product.h
tp00_sports/: CMakeLists.txt
tp00_sports/src/activity/: Class.h  Modality.cpp  Modality.h
tp00_sports/src/personal/: Athlete.h  ClubMember.cpp  ClubMember.h  Teacher.h
tp00_sports/src/sports_club/: SportsClub.cpp  SportsClub.h
tp02_polimorfismo/: CMakeLists.txt  README.md  main.cpp
tp02_polimorfismo/Tests/: tests.cpp
tp02_polimorfismo/src/: config.h  frota.cpp  frota.h  veiculo.cpp  veiculo.h
tp02_polymorphism/: CMakeLists.txt  README.md  main.cpp
tp02_polymorphism/Tests/: tests.cpp
tp02_polymorphism/src/: config.h  fleet.cpp  fleet.h  main.cpp  vehicle.cpp  vehicle.h
tp02_polymorphism_extra/: CMakeLists.txt
tp02_polymorphism_extra/run/: aeda1920_fp02_extra
tp02_polymorphism_extra/src/: animal.cpp  animal.h  vet.cpp  vet.h  zoo.cpp  zoo.h
tp02_polymorphism_extra/tests/: tests.cpp
tp03_templates/: CMakeLists.txt
tp03_templates/src/: exception.h  graph.h
tp03_templates/tests/: tests.cpp
tp04_vectors/: CMakeLists.txt
tp04_vectors/src/exception/: non_existent_client.cpp  non_existent_client.h  non_existent_position.cpp  non_existent_position.h
tp04_vectors/src/model/: client.cpp  client.h  parking_lot.cpp  parking_lot.h
tp04_vectors/src/utils/: utils.h
tp04_vectors/tests/: tests.cpp
tp05_lists/: CMakeLists.txt
tp05_lists/src/: child.cpp  child.h  game.cpp  game.h
tp05_lists/tests/: tests.cpp
tp06_stacks_queues/: CMakeLists.txt
tp06_stacks_queues/src/exception/: empty_queue.cpp  empty_queue.h
tp06_stacks_queues/src/model/: client.cpp  client.h  desk.cpp  desk.h
tp06_stacks_queues/src/util/: stack_ext.h  time_manager.cpp  time_manager.h
tp06_stacks_queues/tests/: tests.cpp
tp07_binary_trees/: CMakeLists.txt
tp07_binary_trees/src/binary_tree/: binary_tree.h  bst.h
tp07_binary_trees/src/dictionary/: dictionary.cpp  dictionary.h  non_existing_word.cpp  non_existing_word.h  word.cpp  word.h
tp07_binary_trees/src/game/: circle.cpp  circle.h  game.cpp  game.h
tp07_binary_trees/test/: tests.cpp
tp09_hash_tables/: CMakeLists.txt
tp09_hash_tables/src/: bet.cpp  bet.h  player.cpp  player.h
tp09_hash_tables/test/: tests.cpp
tp10_priority_queue/: CMakeLists.txt
tp10_priority_queue/src/: box.cpp  box.h  empty_machine_exception.h  object.cpp  object.h  packing_machine.cpp  packing_machine.h
tp10_priority_queue/test/: tests.cpp
tp11_disjoint_sets/: CMakeLists.txt
tp11_disjoint_sets/src/: disjointSets.cpp  disjointSets.h  maze.cpp  maze.h
tp11_disjoint_sets/test/: tests.cpp
